# TrabajoFinDeGrado

./: .gitignore  ExpTFG.ipynb  README.md  TFG.ipynb  main.tex  pyproject.toml  refs.bib
Data/raw/: Data_info.md
